# wauldo-nemo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PUBLISH.md  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: overhead.py
examples/: run_example.py
examples/config/: config.yml  rails.co
src/wauldo_nemo/: __init__.py  _otel.py  actions.py  config.py  policy.py
tests/: test_actions.py  test_policy.py
