[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "wauldo-nemo"
version = "0.1.0"
description = "Wauldo fact-checking as a NeMo Guardrails output rail"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["nemo-guardrails", "wauldo", "fact-check", "hallucination", "guardrails", "llm"]
dependencies = [
    "wauldo>=0.19.0",
]

[project.optional-dependencies]
# The guardrails runtime is only needed to RUN a rail, not to import the
# policy core or unit-test it. Kept optional so CI can test without the
# (heavy) framework install.
nemo = ["nemoguardrails>=0.11"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://wauldo.com"

[tool.hatch.build.targets.wheel]
packages = ["src/wauldo_nemo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
