[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "wauldo-nemo"
version = "0.2.0"
description = "Wauldo verification as NeMo Guardrails rails (fact-check + citations)"
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
    { name = "Wauldo Team", email = "contact@wauldo.com" },
]
requires-python = ">=3.9"
keywords = ["nemo-guardrails", "wauldo", "fact-check", "hallucination", "guardrails", "llm", "rag", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    # [async] pulls aiohttp — the rails use the async client so they never
    # block NeMo's event loop. 0.19.1 makes source_context required + adds
    # the sync guard alias.
    "wauldo[async]>=0.19.1",
]

[project.optional-dependencies]
# The guardrails runtime is only needed to RUN a rail, not to import the
# policy core or unit-test it. Kept optional so CI can test without the
# (heavy) framework install.
nemo = ["nemoguardrails>=0.11"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://wauldo.com"
Repository = "https://github.com/wauldoai/wauldo-nemo"
"Bug Tracker" = "https://github.com/wauldoai/wauldo-nemo/issues"
Changelog = "https://github.com/wauldoai/wauldo-nemo/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/wauldo_nemo"]

[tool.hatch.build.targets.sdist]
include = [
    "src/wauldo_nemo",
    "examples",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
