[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[project]
name = "wauldo-nemo"
version = "0.3.0"
description = "Wauldo verification as NeMo Guardrails rails (fact-check + citations)"
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
    { name = "Wauldo Team", email = "contact@wauldo.com" },
]
requires-python = ">=3.9"
keywords = ["nemo-guardrails", "wauldo", "fact-check", "hallucination", "guardrails", "llm", "rag", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    # 0.19.1 makes source_context required + adds the sync guard alias.
    "wauldo>=0.19.1",
    # The rails use the async SDK client (so they never block NeMo's loop),
    # which needs aiohttp. The SDK does NOT pull it (no `async` extra exists),
    # so we depend on it directly — otherwise a fresh install ImportErrors on
    # the first real call.
    "aiohttp>=3.9",
]

[project.optional-dependencies]
# The guardrails runtime is only needed to RUN a rail, not to import the
# policy core or unit-test it. Kept optional so CI can test without the
# (heavy) framework install.
nemo = ["nemoguardrails>=0.11"]
# OpenTelemetry tracing of the verify call. Optional: the rails import it
# behind a guard and no-op when it's absent (zero overhead when unused).
otel = ["opentelemetry-api>=1.20"]
dev = ["pytest>=7", "mypy>=1.8"]

[project.urls]
Homepage = "https://wauldo.com"
Repository = "https://github.com/wauldoai/wauldo-nemo"
"Bug Tracker" = "https://github.com/wauldoai/wauldo-nemo/issues"
Changelog = "https://github.com/wauldoai/wauldo-nemo/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/wauldo_nemo"]

[tool.hatch.build.targets.sdist]
include = [
    "src/wauldo_nemo",
    "examples",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# Defaults (E, F) + import sorting. Lean on purpose — a thin adapter doesn't
# need an aggressive rule set, just no dead code / unsorted imports / drift.
extend-select = ["I"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/wauldo_nemo"]

# NeMo Guardrails, the Wauldo SDK and opentelemetry ship no type stubs — don't
# fail strict mode on their missing types (our own logic is still strict-checked).
[[tool.mypy.overrides]]
module = ["nemoguardrails.*", "wauldo.*", "opentelemetry.*"]
ignore_missing_imports = true
